--- a/testownik/templates/testownik/index.html
+++ b/testownik/templates/testownik/index.html
@@ -1,5 +1,11 @@
+
+{% extends "testownik/base.html" %}
+{% block content %}
+
 Strona startowa.
 
 Tutaj beda dwa przyciski:
 - rozpocznij test
 - zaloguj jako prowadzacy
+
+{% endblock content %}
