--- a/testownik/templates/testownik/base.html
+++ b/testownik/templates/testownik/base.html
@@ -20,8 +20,9 @@
   <div>
     <ul>
       <li><a href="{% url 'index' %}">Strona główna</a></li>
-      <li><a href="#">Wybór testu</a></li>
       <li><a href="{% url 'help' %}">Pomoc</a></li>
+      <li><a href="{% url 'create_user' %}">Zarejestruj</a></li>
+      <li><a href="{% url 'login' %}">Zaloguj</a></li>
 
     </ul>
     
