--- a/testownik/templates/testownik/base.html
+++ b/testownik/templates/testownik/base.html
@@ -22,14 +22,19 @@
       <li><a href="{% url 'index' %}">Strona główna</a></li>
       <li><a href="{% url 'help' %}">Pomoc</a></li>
       <li><a href="{% url 'create_user' %}">Zarejestruj</a></li>
-      <li><a href="{% url 'login' %}">Zaloguj</a></li>
+{% if not user.is_authenticated %}
+      <li><a href="{% url 'login' %}">Logowanie</a></li>
+{% else %}
+      <li><a href="{% url 'logout' %}">{{ user.username }}(wyloguj)</a></li>
+      <li><a href="{% url 'upload' %}">Zaladuj plik</a></li>
+{% endif %}
+ </ul>
 
-    </ul>
-    
-  </div>
+</div>
 
 {% block content %}
 {% endblock content %}
 
 </body>
 </html>
+
