--- a/testownik/templates/testownik/base.html
+++ b/testownik/templates/testownik/base.html
@@ -1,12 +1,21 @@
 {% load staticfiles %}
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
-  <style>
+<link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
+
+<script type="text/javascript" src="{% static 'js/bootstrap.min.js' %}"></script>
+<script type="text/javascript" src="{% static 'js/bootstrap.js' %}"></script>
+<script type="text/javascript" src="{% static 'js/jquery-2.1.3.min.js' %}"></script>
+
+<link rel="stylesheet" type="text/css" href="{% static 'css/jquery.datetimepicker.css' %}"/>
+<script src="{% static 'js/jquery.js' %}"></script>
+<script src="{% static 'js/jquery.datetimepicker.js' %}"></script>
+<style>
+
 {% block css %}
 {% endblock css %}
   </style>
@@ -36,5 +45,9 @@
 {% endblock content %}
 
 </body>
+
+{% block jsend %}
+{% endblock jsend %}
+
 </html>
 
