--- a/testownik/templates/testownik/base.html
+++ b/testownik/templates/testownik/base.html
@@ -18,6 +18,21 @@
 
 {% block css %}
 {% endblock css %}
+
+#answerscontainer ul
+{
+margin: 0;
+padding: 0;
+list-style-type: none;
+text-align: center;
+}
+
+#answerscontainer ul li {
+    display: inline;
+    list-style-type:none;
+}
+
+
   </style>
 
 {% block js %}
@@ -26,8 +41,7 @@
 </head>
 
 <body>
-  <div>
-    <ul>
+<ul class="nav nav-tabs">
       <li><a href="{% url 'index' %}">Strona główna</a></li>
       <li><a href="{% url 'help' %}">Pomoc</a></li>
       <li><a href="{% url 'create_user' %}">Zarejestruj</a></li>
@@ -35,11 +49,9 @@
       <li><a href="{% url 'login' %}">Logowanie</a></li>
 {% else %}
       <li><a href="{% url 'logout' %}">{{ user.username }}(wyloguj)</a></li>
-      <li><a href="{% url 'upload' %}">Zaladuj plik</a></li>
+      <li><a href="{% url 'upload' %}">Zaladuj test</a></li>
 {% endif %}
- </ul>
-
-</div>
+</ul>
 
 {% block content %}
 {% endblock content %}
