--- a/testownik/templates/testownik/sheet.html
+++ b/testownik/templates/testownik/sheet.html
@@ -1,16 +1,18 @@
 {% extends "testownik/base.html" %}
 {% block content %}
-<div id="pdf">
-    <object width="80%" height="800" type="application/pdf" data="/pdf/{{ nr_index }}/{{ id }}" id="pdf_content">
+<div class="row">
+  <div class="col-md-8" id='pdf'>
+    <object width="100%" height="800" type="application/pdf" data="/pdf/{{ nr_index }}/{{ id }}" id="pdf_content">
     <p>Insert your error message here, if the PDF cannot be displayed.</p>
     </object>
-</div>
-<div>
-<form action="{% url 'sheet' nr_index %}" method="post">
+    </div>
+  <div class="col-md-3"><form action="{% url 'sheet' nr_index %}" method="post">
 {% csrf_token %}
+<div id="answerscontainer">
 {{ formset.as_table }} 
+</div>
 {{ formset.management_form }}
     <input type="submit" value="Zapisz"/>
-</form>
+    </form>
 </div>
 {% endblock content %}
