--- a/testownik/templates/testownik/index.html
+++ b/testownik/templates/testownik/index.html
@@ -12,6 +12,7 @@
 	</div>
 	<div class="col-md-2">
 		<button onclick="location.href={% url 'login' %}">Zaloguj jako prowadzący</button>
+		<button onclick="location.href=/admin/">Zaloguj jako administrator</button>
 	</div>
 </div>
 {% endblock content %}
