--- a/testownik/templates/testownik/sheet.html
+++ b/testownik/templates/testownik/sheet.html
@@ -16,13 +16,16 @@ text-align: center;
 {% endblock css %}
 
 {% block content %}
+<div>
+    {{ student.first_name }} {{ student.last_name }}, {{ student.index_number }}
+</div>
 <div class="row">
   <div class="col-md-8" id='pdf'>
-    <object width="100%" height="800" type="application/pdf" data="/pdf/{{ nr_index }}/{{ id }}" id="pdf_content">
-    <p>Insert your error message here, if the PDF cannot be displayed.</p>
+    <object width="100%" height="800" type="application/pdf" data="/pdf/{{ student.index_number }}/{{ id }}" id="pdf_content">
+    <p>Nie można wyświetlić arkusza PDF, sprawdź ustawienia przeglądarki.</p>
     </object>
     </div>
-  <div class="col-md-3"><form action="{% url 'sheet' nr_index %}" method="post">
+  <div class="col-md-3"><form action="{% url 'sheet' student.index_number %}" method="post">
 {% csrf_token %}
 <div id="answerscontainer">
 {{ formset.as_table }} 
