--- a/testownik/templates/testownik/login.html
+++ b/testownik/templates/testownik/login.html
@@ -1,8 +1,19 @@
 {% extends "testownik/base.html" %}
 {% block content %}
-<form action="{% url 'login' %}" method="post">
-    {% csrf_token %}
-    {{ form }}
-    <input type="submit" value="Zaloguj"/>
-</form>
+
+<div class="container">
+	<div id="loginbox" style="margin-top:50px;" class="mainbox col-md-6 col-md-offset-3 col-sm-8 col-sm-offset-2">                    
+        <div class="panel panel-primary">
+        	<div class="panel-heading"> <h4> Logowanie </h2></div>
+	        <div style="padding-top:30px" class="panel-body" >
+				<form class="form-horizontal-center" action="{% url 'login' %}" method="post"> {% csrf_token %}
+						<div style="margin-bottom: 25px" class="form-group">
+				    		{{ form}}
+				    	</div>
+				    <button class="btn btn-lg btn-primary btn-block" type="submit">Zaloguj</button>
+				</form>
+			</div>
+	</div>
+</div>
+</div>
 {% endblock content %}
