--- a/testownik/templates/testownik/index.html
+++ b/testownik/templates/testownik/index.html
@@ -1,7 +1,7 @@
 
 {% extends "testownik/base.html" %}
 {% block content %}
-
+{% if not user.is_authenticated %}
 <div class="row">
 	<div class="col-md-4">
 		<form action="{% url 'index' %}" method="post">
@@ -15,4 +15,7 @@
 		<button onclick="location.href=/admin/">Zaloguj jako administrator</button>
 	</div>
 </div>
+{% else %}
+Jesteś zalogowany jako {{ user.username }}.
+{% endif %}
 {% endblock content %}
