--- a/testownik/templates/testownik/sheets.html
+++ b/testownik/templates/testownik/sheets.html
@@ -4,12 +4,14 @@
 <table class="table table-striped table-bordered table-hover">
 <tr>
 	<td>Numer indeksu</td>
+	<td>Imię i nazwisko</td>
 	<td>Punkty</td>
 	<td>Arkusz</td>
 </tr>
 {% for sheet in object_list %}
 <tr>
 	<td>{{ sheet.student_id.index_number }}</td>
+	<td>{{ sheet.student_id.first_name }} {{ sheet.student_id.last_name }}</td>
 	<td>{% if sheet.points != None %} {{ sheet.points }}{% endif %}</td>
 	<td><a href="{% url 'sheet' sheet.id %}">Pokaz</a></td>
 </tr>
