--- a/testownik/templates/testownik/create_user.html
+++ b/testownik/templates/testownik/create_user.html
@@ -9,7 +9,7 @@ ul
 
 {% block content %}
 <div class="container">
-    <div id="loginbox" style="margin-top:50px;" class="mainbox col-md-6 col-md-offset-3 col-sm-8 col-sm-offset-2">                    
+    <div id="box" style="margin-top:50px;" class="mainbox col-md-6 col-md-offset-3 col-sm-8 col-sm-offset-2">                    
         <div class="panel panel-success">
             <div class="panel-heading"> <h4> Rejestracja </h2></div>
             <div style="padding-top:15px" class="panel-body" >
