--- a/testownik/templates/testownik/sheets.html
+++ b/testownik/templates/testownik/sheets.html
@@ -1,7 +1,7 @@
 {% extends "testownik/base.html" %}
 
 {% block content %}
-<table>
+<table class="table table-striped table-bordered table-hover">
 <tr>
 	<td>Numer indeksu</td>
 	<td>Punkty</td>
