--- a/testownik/templates/testownik/upload.html
+++ b/testownik/templates/testownik/upload.html
@@ -7,7 +7,11 @@
 
 </style>
 {% block content %}
-{{ msg }}
+{% if msg.error %}
+    <div class="alert alert-danger" role="alert">{{ msg.error }}</div>
+{% elif msg.correct %}
+    <div class="alert alert-success" role="alert">{{ msg.correct }}</div>
+{% endif %}
 <div class="container">
     <div id="loginbox" style="margin-top:50px;" class="mainbox col-md-6 col-md-offset-3 col-sm-8 col-sm-offset-2">                    
         <div class="panel panel-primary">
