przeniesienie funkcji do commons + literowka

--- a/testownik/templates/testownik/index.html
+++ b/testownik/templates/testownik/index.html
@@ -12,7 +12,7 @@
 					<div style="margin-bottom: 25px" class="form-group">
 				    	{{ form }}
 				    </div>
-				    <button class="btn btn-lg btn-success btn-block" type="submit">Przystap do testu</button>
+				    <button class="btn btn-lg btn-success btn-block" type="submit">Przystąp do testu</button>
 				</form>
 			</div>
 		</div>
