--- a/testownik/templates/testownik/base.html
+++ b/testownik/templates/testownik/base.html
@@ -38,18 +38,20 @@
     <!-- Fixed navbar -->
     <nav class="navbar navbar-default navbar-fixed-top">
         <div id="navbar" class="navbar-collapse collapse">
-            <ul class="nav navbar-nav">
-                      <li{% ifequal request.path index_url %} class="active" {% endifequal %}><a href="{% url 'index' %}">Strona główna</a></li>
+            <ul class="nav navbar-nav navbar-left">
+                      <li{% ifequal request.path index_url %} class="active" {% endifequal %}><a href="{% url 'index' %}">
+                      Strona główna</a></li>
                       <li{% ifequal request.path help_url %} class="active" {% endifequal %}><a href="{% url 'help' %}">Pomoc</a></li>
                 {% if not user.is_authenticated %}
                       <li{% ifequal request.path create_user_url %} class="active" {% endifequal %}><a href="{% url 'create_user' %}">Zarejestruj się</a></li>
                       <li{% ifequal request.path login_url %} class="active" {% endifequal %}><a href="{% url 'login' %}">Logowanie</a></li>
                 {% else %}
-                      <li{% ifequal request.path logout_url %} class="active" {% endifequal %}><a href="{% url 'logout' %}">{{ user.username }}(wyloguj)</a></li>
                       <li{% ifequal request.path upload_url %} class="active" {% endifequal %}><a href="{% url 'upload' %}">Dodaj nowy test</a></li>
                       <li{% ifequal request.path tests_url %} class="active" {% endifequal %}><a href="{% url 'tests' %}">Lista testow</a></li>
-                {% endif %}
-                </ul>
+                     <li{% ifequal request.path logout_url %} class="active" {% endifequal %}><a href="{% url 'logout' %}">{{ user.username }} (Wyloguj)</a></li>
+              {% endif %}
+               </ul>
+               
         </div><!--/.nav-collapse -->
     </nav>
 <div style="padding-top: 50px">
