--- a/testownik/templates/testownik/index.html
+++ b/testownik/templates/testownik/index.html
@@ -37,7 +37,7 @@
 </div>
 {% else %}
     <div class="alert alert-success" role="alert">
-    Liczba zdobytych punktów: <b>{{ user.username }}</b>
+    Jesteś zalogowany jako: <b>{{ user.username }}</b>
     </div>
 {% endif %}
 {% endblock content %}
