--- a/testownik/templates/testownik/tests.html
+++ b/testownik/templates/testownik/tests.html
@@ -22,6 +22,7 @@ $(document).ready(function(){
     <td>Aktywny</td>
     <td>Czas startu</td>
     <td>Czas końca</td>
+    <td>Sala</td>
     <td>Arkusze</td>
     <td>Edytuj</td>
 </tr>
@@ -31,6 +32,7 @@ $(document).ready(function(){
     <td>{% if test.is_active %} Tak {% else %} Nie {% endif %}</td>
     <td>{{ test.start_time }}</td>
     <td>{{ test.end_time }}</td>
+    <td>{% if test.room %} {{ test.room }} {% else %} {% endif %}</td>
     <td><a href="{% url 'sheets' test.id %}">Pokaz</a></td>
     <td><button id="{{ test.id }}">Edytuj</a></td>
 </tr>
