--- a/testownik/templates/testownik/sheet.html
+++ b/testownik/templates/testownik/sheet.html
@@ -37,9 +37,17 @@ function timer(){
     {
         clearInterval(counter);
         alert("Czas minął! Twoje odpowiedzi zostaną zapisane do bazy");
-        document.getElementById("end_button").click();
+        document.getElementById("post_button").click();
     }
 }
+
+function ask(){
+    if(confirm('Czy na pewno chcesz zakończyć test?'))
+    {
+        document.getElementById("post_button").click();
+    }
+}
+
 {% endblock js%}
 
 
@@ -101,10 +109,12 @@ Liczba zdobytych punktów: <b>{{ msg_points }}</b>
 <div id="answerscontainer">
 {{ formset.as_table }} 
 </div>
+
 {{ formset.management_form }}
     <script>counter=setInterval(timer, 1000); </script>
-    <button id="end_button"class="btn btn-danger" type="submit">Zakończ test</button>
+    <button id="post_button"class="btn btn-danger" type="submit" style="display: none;">POST</button>
     </form>
+    <button id="end_button"class="btn btn-danger" onclick="ask()">Zakończ test</button>
 </div>
     {% endif %}
 {% endif %}
