--- a/testownik/templates/testownik/tests.html
+++ b/testownik/templates/testownik/tests.html
@@ -8,6 +8,14 @@ $(document).ready(function(){
         $(id).toggle()
     });
 });
+
+function ask(location){
+    if(confirm('Czy na pewno chcesz usunąć test?'))
+    {
+        window.location.href = location;
+    }
+}
+
 {% endblock js %}
 
 {% block content %}
@@ -25,7 +33,7 @@ $(document).ready(function(){
     <td>Sala</td>
     <td>Arkusze</td>
     <td>Edytuj</td>
-    <td>Usun</td>
+    <td>Usuń</td>
 </tr>
 {% for test in object_list %}
 <tr>
@@ -36,7 +44,7 @@ $(document).ready(function(){
     <td>{% if test.room %} {{ test.room.name }} {% else %} {% endif %}</td>
     <td><a href="{% url 'sheets' test.id %}">Pokaz</a></td>
     <td><button id="{{ test.id }}">Edytuj</a></td>
-    <td><a href="{% url 'delete' test.id %}">Usun</a></td>
+    <td><a id="askingLink" href="#" onclick="ask('{% url 'delete' test.id %}');return false;">Usuń</a></td>
 </tr>
 <tr id="edit_tr{{ test.id }}"><td>
     <form id="{{ test.id }}"action="{% url 'tests' %}" method="post" enctype="multipart/form-data">
