--- a/testownik/templates/testownik/sheet.html
+++ b/testownik/templates/testownik/sheet.html
@@ -17,19 +17,28 @@ text-align: center;
 
 {% block js%}
 
-var timeLeft=15*60;
+var timeZoneOffsetString = '{{ sheet.start_time|date:"O"}}';
+var timeZoneOffsetStringRefformated = timeZoneOffsetString.substring(0, 3) + ":"+"00";
+var testStartDate = new Date('{{ sheet.start_time|date:"c"}}' + timeZoneOffsetStringRefformated);
+var endDate = new Date(testStartDate.getTime() + {{sheet.test_id.time }}*60000);
+var actualTime = new Date();
+var difference = new Date(endDate - actualTime);
+
+var timeLeft=difference.getTime()/1000;
 var counter;
 function cut(n){
-    return n > 9 ? "" + n: "0" + n;
+    return n > 9 ? "" + n.toFixed(0): "0" + n.toFixed(0);
 }
 function timer(){
     timeLeft-=1;
     document.getElementById("timer").innerHTML = cut(Math.floor(timeLeft/60)) + ":" + cut(timeLeft % 60);
-    if(timeLeft<=0)
+    if(timeLeft<0) { timeLeft=0; }
+
+    if(timeLeft==0)
     {
         clearInterval(counter);
         alert("Czas minął! Twoje odpowiedzi zostaną zapisane do bazy");
-        document.getElementById("post_button").click();
+        document.getElementById("end_button").click();
     }
 }
 
@@ -51,6 +60,7 @@ Liczba zdobytych punktów: <b>{{ msg_points }}</b>
 </div>
 {% else %}
     <nav class="navbar navbar-default navbar-fixed-top">
+    <div class="container"
         <div id="navbar" class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
                 <li><a><h4><b>{{ student.first_name }} {{ student.last_name }}</b></h4></a></li>
@@ -67,6 +77,7 @@ Liczba zdobytych punktów: <b>{{ msg_points }}</b>
             </ul>
             {% endif %}
         </div><!--/.nav-collapse -->
+    </div>
     </nav>
 <div style="padding-top: 20px">
 <div class="row" style="position:relative;">
