One more simple fix

--- a/testownik/templates/testownik/sheet.html
+++ b/testownik/templates/testownik/sheet.html
@@ -38,7 +38,7 @@ function timer(){
     {
         clearInterval(counter);
         alert("Czas minął! Twoje odpowiedzi zostaną zapisane do bazy");
-        document.getElementById("end_button").click();
+        document.getElementById("post_button").click();
     }
 }
 
